--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ authors = [
     { name = "Joao Victor", email = "joao.victor@delfosim.com" }
 ]
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "pydantic-settings>=2.12.0",
+    "s3fs>=2026.2.0",
+]
 
 [build-system]
 requires = ["uv_build>=0.9.17,<0.10.0"]
