--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.14"
 dependencies = [
     "h5netcdf>=1.8.1",
     "h5py>=3.15.1",
+    "httpx>=0.28.1",
     "pydantic-settings>=2.12.0",
     "s3fs>=2026.2.0",
     "xarray>=2026.2.0",
