--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "httpx>=0.28.1",
     "pydantic-settings>=2.12.0",
     "s3fs>=2026.2.0",
+    "tqdm>=4.67.3",
     "xarray>=2026.2.0",
 ]
 
